# speedforge

./: .gitignore  .gitmodules  LAUNCHER_GUIDE.md  SpeedForge.bat  dev.bat  index.html  package-lock.json  package.json  start.bat  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
dist-electron/: main.js  main.js.map  preload.js  preload.js.map  tsconfig.tsbuildinfo
dist-electron/electron/: WidgetWindow.d.ts  WidgetWindow.js  main.js  preload.d.ts  preload.js
electron/: WidgetWindow.ts  main.ts  preload.js  preload.ts
electron/speech/: speechModule.js  speechModule.mjs
rust_app/: Cargo.toml  client.html  run.bat  run.sh
rust_app/src/: gap_calculator.rs  main.rs  telemetry_fields.rs  websocket_server.rs
scripts/: run-dev.js
src/: App.css  App.tsx  TelemetryWidget.tsx  index.css  main.tsx  vite-env.d.ts
src/assets/: session_data.yaml
src/components/: BaseDraggableComponent.tsx  BaseWidget.tsx  BasicMapWidget.tsx  BrakeVsSteerPixiWidget.tsx  CarBalanceWidget.tsx  CarIndexTelemetryWidget.tsx  CarLeftIndicatorWidget.tsx  CarRightIndicatorWidget.tsx  ClickThroughHint.tsx  ControlPanel.tsx  GForceMeterWidget.tsx  GearShiftWidget.tsx  NearbyCarWidget.tsx  NumberSliderWidget.tsx  NumberWidget.tsx  PedalTracePixiWidget.tsx  PedalTraceWidget.tsx  RacePositionWidget.tsx  SessionInfoWidget.tsx  ShiftIndicatorWidget.tsx  SimpleControlPanel.tsx  SimpleRaceTelemetryWidget.tsx  SimpleTelemetryWidget.tsx  SlipYawPixiWidget.tsx  SlipYawWidget.tsx  SpeedWidget.tsx  SpotterWidget.tsx  TimeWidget.tsx  TrackMapWidget.tsx  TrackPositionWidget.tsx  (+6 more)
(+30 files in other folders)
