[package]
name = "speedforge"
version = "0.1.0"
edition = "2024"

[dependencies]
iracing = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"
